--- a/wso2_sense_agent/app/src/main/res/values/strings.xml
+++ b/wso2_sense_agent/app/src/main/res/values/strings.xml
@@ -3,5 +3,12 @@
     <string name="title_activity_sense_settings">Sense Settings</string>
     <string name="hostname">Server URL https://host:9443</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">DeEnroll</string>
+    <string name="title_activity_activity_select_sensor">ActivitySelectSensor</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
